...
			return
		}
		let response = unwrapGame.play(move)
		if response.isRight {
			gameScore = response.score
		} else {
			let alertController = UIAlertController(title: "Game Over", message: "Your score is \(gameScore) and high score is \(highScore)", preferredStyle: .alert)
			alertController.addAction(UIAlertAction(title: "Play Again", style: .default) { [unowned self] _ in
				self.newGame()
			})
			present(alertController, animated: true)
		}
	}
...
				break
		}
	}
	
	@IBAction func playAgainClick(_ sender: Any) {
		let alertController = UIAlertController(title: "Play Again", message: "Do you want to restart game?", preferredStyle: .alert)
		alertController.addAction(UIAlertAction(title: "OK", style: .default) { [unowned self] _ in
			self.newGame()
		})
		alertController.addAction(UIAlertAction(title: "Cancel", style: .cancel))
		present(alertController, animated: true)
	}
	
...
